--- a/src/index.css
+++ b/src/index.css
@@ -13,25 +13,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 7rem;
   line-height: 1.1;
 }
 
@@ -46,6 +37,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
@@ -54,14 +46,22 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+a{
+  color: #646cff;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #8c90e2;
+  
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
+  
   button {
     background-color: #f9f9f9;
   }
