--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -1,3 +1,14 @@
+.indexcontent{
+  margin-top: 100px;
+  display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+}
+
 .content{
     display: flex;
     flex-wrap: wrap;
@@ -5,6 +16,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    
 }
 
 .content h1{
@@ -23,3 +35,4 @@
     margin-right: 2rem;
   }
 
+ 
