--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,27 +1,31 @@
-nav {
-    background-color: #333;
-    padding: 1rem;
-    color: #fff;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.navbar{
+  background-color: #0f0f0f;
+  padding: 1rem;
+  color: #fff;
+}
+
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
   
-  nav h1 {
-    margin: 0;
-    font-size: 1.5rem;
-  }
+.navbar h1 {
+  margin: 0;
+  font-size: 1.5rem;
+}
   
-  nav ul {
+  .navbar ul {
     list-style: none;
     padding: 0;
     margin: 0;
     display: flex;
     gap: 1rem;
+    
   }
   
   nav li {
+    text-size-adjust: 4rem;
     margin-right: 2rem;
   }
   
