--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -37,3 +37,13 @@
     color: #c5e0c6;
     text-decoration: none;
   }
+
+  .logout-button {
+    background: none;
+    border: none;
+    color: #18eb18;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 0;
+  }
