--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,30 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.modal {
+  background-color: white;
+  border-radius: 8px;
+  padding: 20px;
+  max-width: 500px;
+  margin: auto;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal form input {
+  width: 95%;
+  margin-bottom: 10px;
+  padding: 8px;
+  font-size: 1rem;
+}
