--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -47,12 +47,14 @@
 }
 
 .form input {
+  width: 95%;
   margin-bottom: 10px;
   padding: 8px;
   font-size: 1rem;
 }
 
 .form select{
+  width: 95%;
   margin-bottom: 10px;
   padding: 8px;
   font-size: 1rem;
