--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -24,4 +24,30 @@
     margin-right: 2rem;
   }
 
+
+  .account-page {
+    max-width: 800px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+  
+  .account-page h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #4CAF50;
+    padding-bottom: 10px;
+  }
+  
+  .user-details p {
+    font-size: 18px;
+    line-height: 1.6;
+    margin: 10px 0;
+  }
+  
+  .user-details p strong {
+    color: #0b440d;
+  }
  
